# STEMboomerang

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  constants.py  main.py  pyproject.toml  requirements.txt  response_types.py
backend/models/: __init__.py
backend/processing/: core.py  heuristics.py  llm.py  markdown.py  quality.py
backend/utils/: conversions.py  helpers.py  list_files.py
deploy/railway/: entrypoint.sh  nginx.conf  nginx.conf.template  supervisord.conf
frontend/: Dockerfile  mime.types  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: vite-env.d.ts
frontend/src/app/: App.tsx  routes.ts
frontend/src/app/components/auth/: require-auth.tsx
frontend/src/app/contexts/: auth-context.tsx  candidates-context.tsx
frontend/src/app/layouts/: root-layout.tsx
frontend/src/app/pages/: dashboard-page.tsx  login-page.tsx  review-page.tsx  upload-page.tsx
frontend/src/app/types/: candidate.ts
frontend/src/app/utils/: csv-export.ts  llm-extraction.ts  normalization.ts  pdf-extractor.ts  validation.ts
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/styles/: theme.css
